--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-1">
                     TED</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">TED is a global non-profit community with the motto of Ideas Worth Spreading. It started in 1984 as an annual conference on Technology, Entertainment and Design, true to its name. Ever since, TED has grown to cover almost all topic from science to business to global issues in over 100 languages. World class speakers from a wide variety of disciplines and communities share their ideas in the form of short, powerful talks in under 18 minutes. For more information about TED's upcoming conferences, visit <a href="https://www.ted.com">here</a>. Follow TED on <a href="https://www.twitter.com/tedtalks">Twitter</a>, at TEDTalks on  <a href="https://www.youtube.com/user/TEDtalksDirector">YouTube</a> , or on Facebook at <a href="https://www.facebook.com/TED">TED.</a> </h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">TED is a global non-profit community with the motto of Ideas Worth Spreading. It started in 1984 as an annual conference on Technology, Entertainment and Design, true to its name. 
+                  Ever since, TED has grown to cover almost all topic from science to business to global issues in over 100 languages. 
+                  World class speakers from a wide variety of disciplines and communities share their ideas in the form of short, powerful talks in under 18 minutes. 
+                  For more information about TED's upcoming conferences, visit <a href="https://www.ted.com">here</a>. Follow TED on <a href="https://www.twitter.com/tedtalks">Twitter</a>, at TEDTalks on <a href="https://www.youtube.com/user/TEDtalksDirector">YouTube</a>,
+                  or on Facebook at <a href="https://www.facebook.com/TED">TED.</a> </h3>
                 
             </div>
         </div>
@@ -120,7 +124,7 @@
                         TEDx program is designed to help communities, organizations and individuals to spark conversation and connection by screening of TED Talks videos or a combination of live presenters and TED Talks videos. TEDx events are planned and coordinated independently, under a license granted by TED. Branded as TEDx, the x stands for “independently organized TED event”. TEDx events are organized by licensed volunteers, adhering to the rules and regulations laid down by TED.
                     </p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://ted.com/">&nbsp;MORE</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://www.ted.com/about/programs-initiatives/tedx-program">&nbsp;MORE</a></div>
             </div>
 
             <div class="mbr-figure" style="width: 100%;"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/d0NHOpeczUU?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
