--- a/pastevents.html
+++ b/pastevents.html
@@ -47,11 +47,11 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
-              <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">&nbsp;HOME</a></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="#top">&nbsp;Home</a></li>
               <li class="nav-item"><a class="nav-link link text-white display-4" href="#features16-7">2017</a></li>
               <li class="nav-item"><a class="nav-link link text-white display-4" href="#features16-8">2018</a></li>
-              <li class="nav-item"><a class="nav-link link text-white display-4" href="#social-buttons2-h">SOCIAL MEDIA</a></li>
-              <li class="nav-item"><a class="nav-link link text-white display-4" href="#form1-9">CONTACT</a></li></ul>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="#social-buttons2-h">Social Media</a></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="#form1-9">Contact</a></li></ul>
               <div class="navbar-buttons mbr-section-btn">
                   <a class="btn btn-sm btn-primary display-4" href="https://www.yepdesk.com/tedxskct-2018">BUY TICKET</a>
               </div>
