--- a/pastevents.html
+++ b/pastevents.html
@@ -59,8 +59,12 @@
     </nav>
 </section>
 
-<section class="engine"><a href="http://satheesh1997.ml">SATHEESH KUMAR</a></section><section class="cid-qs3kN5lKOp mbr-fullscreen mbr-parallax-background" id="header2-1" data-rv-view="267">
+<section class="engine"><a href="http://satheesh1997.ml">SATHEESH KUMAR</a></section>
+  <section class="cid-qs3kN5lKOp mbr-fullscreen mbr-parallax-background" id="header2-1" data-rv-view="267">
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(35, 35, 35);"></div>
+    <div class="container align-center">
+        <div class="media-container-column mbr-white col-md-10 offset-md-1"></div>
+    </div>
     <div class="container align-center">
         <div class="media-container-column mbr-white col-md-10 offset-md-1"></div>
     </div>
