--- a/pastevents.html
+++ b/pastevents.html
@@ -20,6 +20,8 @@
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
   <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="stylesheet" href="vendor/slider/css/nivo-slider.css" type="text/css" />
+  <link rel="stylesheet" href="vendor/slider/css/preview.css" type="text/css" media="screen" />
   
   
   
@@ -72,6 +74,13 @@
         <a href="#next">
             <i class="mbri-down mbr-iconfont"></i>
         </a>
+    </div>
+    <div class="slider1-area">
+            <div class="bend niceties preview-1">
+                <div id="ensign-nivoslider-3" class="slides nivoSlider">
+				<img src="assets/bridge-1920x1280" alt="slider" title="#slider-direction-8" style="display: none; width: 1352px;">
+				</div>
+			</div>
     </div>
 </section>
 
