--- a/pastevents.html
+++ b/pastevents.html
@@ -61,6 +61,15 @@
     </nav>
 </section>
 
+<section>
+	    <div class="slider1-area">
+            <div class="bend niceties preview-1">
+                <div id="ensign-nivoslider-3" class="slides nivoSlider">
+				<img src="assets/bridge-1920x1280" alt="slider" title="#slider-direction-8" style="display: none; width: 1352px;">
+				</div>
+			</div>
+    	    </div>
+</section>
 <section class="engine"><a href="http://satheesh1997.ml">SATHEESH KUMAR</a></section>
   <section class="cid-qs3kN5lKOp mbr-fullscreen mbr-parallax-background" id="header2-1" data-rv-view="267">
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(35, 35, 35);"></div>
@@ -75,13 +84,7 @@
             <i class="mbri-down mbr-iconfont"></i>
         </a>
     </div>
-    <div class="slider1-area">
-            <div class="bend niceties preview-1">
-                <div id="ensign-nivoslider-3" class="slides nivoSlider">
-				<img src="assets/bridge-1920x1280" alt="slider" title="#slider-direction-8" style="display: none; width: 1352px;">
-				</div>
-			</div>
-    </div>
+
 </section>
 
 <section class="features16 cid-qs3rkFRM76" id="features16-7" data-rv-view="282">
