--- a/pastevents.html
+++ b/pastevents.html
@@ -69,7 +69,10 @@ $(document).ready(function(){
     </nav>
 </section>
 
+	
+	<section class="cid-qs3kN5lKOp mbr-fullscreen mbr-parallax-background" id="header2-1" data-rv-view="267">
 <div id="content"></div>
+	</section>
 	
 <section class="engine"><a href="http://satheesh1997.ml">SATHEESH KUMAR</a></section>
   <section class="cid-qs3kN5lKOp mbr-fullscreen mbr-parallax-background" id="header2-1" data-rv-view="267">
