--- a/slideshow.html
+++ b/slideshow.html
@@ -42,17 +42,6 @@ img {vertical-align: middle;}
   background-color: rgba(0,0,0,0.8);
 }
 
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
 /* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
@@ -108,15 +97,13 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="assets/images/bridge-1920x1280.jpg" style="width:100%">
-  <div class="text">Caption Text</div>
+  <img src="assets/images/Team_2017.jpg" style="width:100%">
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="assets/images/bridge-1920x1280.jpg" style="width:100%">
-  <div class="text">Caption Two</div>
-</div>
+  <img src="assets/images/Team_2018.jpg" style="width:100%">
+  </div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
