--- a/index.html
+++ b/index.html
@@ -322,7 +322,8 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2019 TEDxSKCT - All Rights Reserved
+                   This independent TEDx event is operated under license from TED. <br>
+          TEDxSKCT is hosted by the students of Sri Krishna College of Technology, Coimbatore.
                 </p>
             </div>
         </div>
