--- a/pastevents.html
+++ b/pastevents.html
@@ -197,6 +197,34 @@ $(document).ready(function(){
     </div>
   
 </section>
+	
+<section class="cid-qs3kN5lKOp mbr-fullscreen mbr-parallax-background" id="header2-1" data-rv-view="267">
+	<div class="container">
+        <div class="media-container-row">
+            <div class="title col-12 col-md-8">
+                <h2 class="align-left pb-3 mbr-fonts-style display-1">
+                    TED</h2>
+                <h3 class="mbr-section-subtitle align-left mbr-light mbr-fonts-style display-5">
+                  or on Facebook at <a href="https://www.facebook.com/TED">TED.</a> </h3>
+                
+            </div>
+        </div>
+</div>
+	
+	
+	<div class="container">
+        <div class="media-container-row">
+            <div class="title col-12 col-md-8">
+                <h2 class="align-right pb-3 mbr-fonts-style display-1">
+                    TED</h2>
+                <h3 class="mbr-section-subtitle align-right mbr-light mbr-fonts-style display-5">
+                  or on Facebook at <a href="https://www.facebook.com/TED">TED.</a> </h3>
+                
+            </div>
+        </div>
+</div>
+</section>
+
 
 <section class="features16 cid-qs3rkFRM76" id="features16-8" data-rv-view="282">
     <div class="container align-center">
