--- a/pastevents.html
+++ b/pastevents.html
@@ -199,6 +199,7 @@ $(document).ready(function(){
 </section>
 	
 <section class="cid-qs3kN5lKOp mbr-fullscreen mbr-parallax-background" id="header2-1" data-rv-view="267">
+	    <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(35, 35, 35);"></div>
 	<div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
