--- a/pastevents.html
+++ b/pastevents.html
@@ -198,8 +198,8 @@ $(document).ready(function(){
   
 </section>
 	
-<section class="cid-qs3kN5lKOp mbr-fullscreen mbr-parallax-background" id="header2-1" data-rv-view="267">
-	    <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(35, 35, 35);"></div>
+ <section class="header7 cid-qs3q3S4tgH" id="header7-6" data-rv-view="277">	   
+        <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(35, 35, 35);"></div>
 	<div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
