--- a/pastevents.html
+++ b/pastevents.html
@@ -199,29 +199,29 @@ $(document).ready(function(){
 </section>
 	
  <section class="header7 cid-qs3q3S4tgH" id="header7-6" data-rv-view="277">	   
-        <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(35, 35, 35);"></div>
-	<div class="container">
+        <div class="container">
         <div class="media-container-row">
-            <div class="title col-12 col-md-8">
-                <h2 class="align-left pb-3 mbr-fonts-style display-1">
-                    TED</h2>
-                <h3 class="mbr-section-subtitle align-left mbr-light mbr-fonts-style display-5">
-                  or on Facebook at <a href="https://www.facebook.com/TED">TED.</a> </h3>
-                
+
+            <div class="media-content align-left">
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1">
+                    Flickr</h1>
+                <div class="mbr-section-text mbr-white pb-3">
+                    <p class="mbr-text mbr-fonts-style display-5">
+TEDx                    </p>
+                </div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://www.ted.com/about/programs-initiatives/tedx-program">&nbsp;MORE</a></div>
             </div>
-        </div>
-</div>
-	
-	
-	<div class="container">
-        <div class="media-container-row">
-            <div class="title col-12 col-md-8">
-                <h2 class="align-right pb-3 mbr-fonts-style display-1">
-                    TED</h2>
-                <h3 class="mbr-section-subtitle align-right mbr-light mbr-fonts-style display-5">
-                  or on Facebook at <a href="https://www.facebook.com/TED">TED.</a> </h3>
-                
+
+ <div class="media-content align-right">
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1">
+                    Youtube</h1>
+                <div class="mbr-section-text mbr-white pb-3">
+                    <p class="mbr-text mbr-fonts-style display-5">
+TEDx                    </p>
+                </div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://www.ted.com/about/programs-initiatives/tedx-program">&nbsp;MORE</a></div>
             </div>
+
         </div>
 </div>
 </section>
