--- a/pastevents.html
+++ b/pastevents.html
@@ -197,9 +197,8 @@
                     Flickr</h1>
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-5">
-TEDx                    </p>
+			    <a href="https://www.flickr.com/photos/tedxskct/albums/72157686335917991">Images of 2017</a> </p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://www.ted.com/about/programs-initiatives/tedx-program">&nbsp;MORE</a></div>
             </div>
 
  <div class="media-content align-right">
@@ -207,9 +206,8 @@ TEDx                    </p>
                     Youtube</h1>
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-5">
-TEDx                    </p>
+			Talks of 2017</p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://www.ted.com/about/programs-initiatives/tedx-program">&nbsp;MORE</a></div>
             </div>
 
         </div>
