--- a/pastevents.html
+++ b/pastevents.html
@@ -193,16 +193,16 @@
         <div class="media-container-row">
 
             <div class="media-content align-left">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
+                <h1 class="pb-3 mbr-fonts-style display-2">
                     Flickr</h1>
-                <div class="mbr-section-text mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-5">
-			    <a href="https://www.flickr.com/photos/tedxskct/albums/72157686335917991">Images of 2017</a> </p>
-                </div>
+		  <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-1" 
+		   href="https://www.flickr.com/photos/tedxskct/albums/72157686335917991">&nbsp;Images of 2017</a></div>   
+		    
+               
             </div>
 
  <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
+                <h1 class="pb-3 mbr-fonts-style display-2">
                     Youtube</h1>
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-5">
