--- a/pastevents.html
+++ b/pastevents.html
@@ -191,10 +191,9 @@
  <section class="header7 cid-qs3q3S4tgH" id="header7-6" data-rv-view="177">	   
         <div class="container">
         <div class="media-container-row">
-
             <div class="media-content align-left">
                 <h1 class="pb-3 mbr-fonts-style text-white display-2">
-                        Flickr</h1>
+                        &ensp; Flickr</h1>
 		  <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-3" 
 		   href="https://www.flickr.com/photos/tedxskct/albums/72157686335917991">&nbsp;Images of 2017</a></div>   
 		    
