--- a/pastevents.html
+++ b/pastevents.html
@@ -193,7 +193,7 @@
         <div class="media-container-row">
             <div class="media-content align-left">
                 <h1 class="pb-3 mbr-fonts-style text-white display-2">
-                        &nbsp; Flickr</h1>
+			<strong> &nbsp;Flickr</strong></h1>
 		  <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-3" 
 		   href="https://www.flickr.com/photos/tedxskct/albums/72157686335917991">&nbsp;Images of 2017</a></div>   
 		    
@@ -201,12 +201,10 @@
             </div>
 
  <div class="media-content align-right">
-                <h1 class="pb-3 mbr-fonts-style display-2">
-                    Youtube</h1>
-                <div class="mbr-section-text mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-5">
-			Talks of 2017</p>
-                </div>
+                <h1 class="pb-3 mbr-fonts-style  text-white display-2">
+			<strong>&nbsp;Youtube</strong></h1>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-3" 
+		   href="https://www.youtube.com/playlist?list=PLsRNoUx8w3rNX32LgDfqtF86zGLpX43yo">&nbsp;Talks of 2017</a></div>  
             </div>
 
         </div>
